style.css
html, body {
    /* Disable scrolling*/
    height: 100%;
    overflow: hidden; 
    font-family: Arial, Helvetica, sans-serif;
}

button {
    outline: none;
    border: none;
    box-shadow: none;
}

button:active {
    /* border-style: outset; */
    border-style: none;
}

.title {
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 99;
    position: absolute;
    top: 0%;
    left: 0%;
    margin: 0%;
}

.title-item{
    position: relative;
    padding: 10px;
    /* top: 10px; */
}

.start{
    /* display: grid; */
    position: absolute;
    top: 25vh;
    left: 15vw;
    width: auto;
    height: 60vh;
}

.tutorial {
    text-align: center;
    color: white;
}
    
.start-button{
    width: auto;
    /* height: 20%; */
    font-size: 34px;
    margin: auto;
    display: block;
    overflow: wrap;
}

.sho-game-button {
    font-size: 18px;
}

.gameover{
    position: absolute;
    top: 25vh;
    left: 15vw;
    width: auto;
    height: 60vh;
}

.wrapper {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    position: fixed;
    top: 0;
    left: 0;
}

#background {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: -1; /* Always stays at bottom*/
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-image: url('assets/background1024.png');
}

#game {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
}

.foreground { 
    position: absolute;
    bottom: 0%;
    height: 70%;
    width: 100%;
    box-sizing: border-box;
}

#ship {
    width: auto;
    height: 55%;
    position: absolute;
}

#ship-img {
    height: 100%;
    object-fit: contain;
    z-index: 50;
    position: relative;
}

.sprite-container {
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    object-fit: contain;
}

.satoshi {
    position: absolute;
    height: 75%;
    width: auto;
    left: 0;
    transform: translate(50%, -115%);
}

#satoshi-fail {
    height: 100%;
    width: 100%;
    background-image: url("assets/fishing_man_2.png");
    object-fit: contain;
    /* transform: translate(50%, -100%); */
}

#satoshi-idle {
    height: 100%;
    width: 100%;
    background-image: url("assets/fishing_man_1.png");
    object-fit: contain;
    transform: translate(50%, -100%);
}

#exclamation {
    background-image: url("assets/exclamation.png");
    width: 25%;
    height: 25%;
    left: 15%;
    top: -15%;
    position: relative;   
}

#satoshi-up {
    height: 100%;
    width: 100%;
    object-fit: contain;
    background-image: url("assets/fishing_man.png");
}

.ripple {
    background-image: url("assets/ripple.png");
    width: 100%;
    position: relative;
    top: -15%;
    aspect-ratio: 600 / 275;
    z-index: 1;
    display: block;
}


.member {
    /* background-color: green; */
    position: absolute;
    top: 40%;
    left: 50%;
    height: 100%;
    width: 100%;
}

#temp-member {
    background-image: url("assets/temp_member.png");
}

#sho {
    background-image: url("assets/sho.png");
}

#aiba {
    background-image: url("assets/aiba.png");
}

#nino {
    background-image: url("assets/nino.png");
}

#jun {
    background-image: url("assets/jun.png");
}

.fish {
    position: absolute;
    top: 40%;
    left: 50%;
    height: 100%;
    width: 100%;
    background-image: url("assets/fish.png");
}


.life-container {
    display: flex;
    position: absolute;
    top: 0;
    height: 10vh;
    width: auto;
    flex-direction: row;
}

.life {
    flex: 1 1 10%;
    background-image: url('assets/life.png');
    background-repeat: no-repeat;
    margin: 2px;
    background-size: contain;
    aspect-ratio: 1 / 1;
    height: 60%;
    position: relative;
}

.rightUi {
    position: absolute;
    right: 0%;
    height: 100%;
    margin-right: 3%;
    z-index: 100;
}

.score {
    color: white;
    top: 1%;
    font-size: 22px;
    position: relative;
    right: 0%;
}

.icon-container {
    position: absolute;
    width: auto;
    max-width: 200px;
    height: 35%;
    right: 0;
    top: 6vh;
}

.icon {
    height: 20%;
    position: relative;
    background-size: contain;
    background-repeat: no-repeat;
    aspect-ratio: 1 / 1;
    margin: 12px;
}

.icon-count{
    width: 50%;
    height: 30%;
    color: white;
    font-size: 16px;
    position: absolute;
    font-weight: bold;
    left: 80%;
    bottom: 0%;
    background-image: none;
}

#sho-icon {
    background-image: url('assets/sho-icon.png');
}

#aiba-icon  {
    background-image: url('assets/icon1.png');
}

#nino-icon {
    background-image: url('assets/icon1.png');
}

#jun-icon {
    background-image: url('assets/icon1.png');
}


.stroke {
    text-shadow:
        -1px -1px 2px #000,
         0px -1px 2px #000,
         1px -1px 2px #000,
         1px  0px 2px #000,
         1px  1px 2px #000,
         0px  1px 2px #000,
        -1px  1px 2px #000,
        -1px  0px 2px #000;
}

.hitbox{
    background-color: transparent;
    width: 50vw;
    height: 100vh;
    position: absolute;
    bottom: 0;
    z-index: 98;
}

#left-hitbox {
    left: 0;
}

#right-hitbox {
    left: 50vw;
}

* {
    -webkit-touch-callout:none;
    -webkit-user-select:none;
    -moz-user-select:none;
    -ms-user-select:none;
    user-select:none;
}

a.button {
    -webkit-appearance: button;
    -moz-appearance: button;
    appearance: button;
    background-color: white;

    text-decoration: none;
    color: initial;
}

